personas y espacios revisado