@@ -5,12 +5,27 @@ import com.example.adamapbackend.domain.enums.Rol;
 import lombok.Getter;
 
 import jakarta.persistence.*;
+import lombok.NoArgsConstructor;
+
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
-@Getter
 @Embeddable
+@NoArgsConstructor
 public class PropietarioEspacio {
+    public boolean isEINA() {
+        return propietario.size() == 1 && propietario.get(0).equals("EINA");
+    }
+
+    public boolean isDepartamento() {
+        return propietario.size() == 1 && Departamento.of(propietario.get(0)) != null;
+    }
+
+    public boolean isPersonas() {
+        return isPersonas;
+    }
+
     @Transient
     private boolean isEINA;
     @Transient
@@ -18,11 +33,12 @@ public class PropietarioEspacio {
     @Transient
     private boolean isPersonas;
 
+    @Getter
     @ElementCollection(targetClass = String.class)
     List<String> propietario;
 
     public PropietarioEspacio(Departamento departamento) {
-        propietario = List.of(departamento.getDepartamento());
+        propietario = new ArrayList<>(Arrays.asList(departamento.getDepartamento()));
         isDepartamento = true;
     }
 
@@ -38,12 +54,12 @@ public class PropietarioEspacio {
         if (personasConRolInvestigadorODocente.isEmpty() || personasConRolInvestigadorODocente.size() != personas.size())
             throw new IllegalArgumentException("Las personas deben tener como rol investigador o docente");
 
-        propietario = personas.stream().map(Persona::getCorreo).toList();
+        propietario = new ArrayList<>(personas.stream().map(Persona::getCorreo).toList());
         isPersonas = true;
     }
 
-    public PropietarioEspacio() {
-        propietario = List.of("EINA");
+    public PropietarioEspacio(String eina) {
+        propietario = new ArrayList<>(Arrays.asList(eina));
         isEINA = true;
     }
 }
